--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./js/exampl.js"></script>
+    <!-- <script src="./js/exampl.js"></script> -->
+    <script src="./js/module-4.js"></script>
   </body>
 </html>
