--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <!-- <script src="./js/exampl.js"></script> -->
-    <script src="./js/module-4.js"></script>
+    <!-- <script src="./js/module-4.js"></script> -->
+    <script src="./js/module-5.js"></script>
   </body>
 </html>
