--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <!-- <script src="./js/exampl.js"></script> -->
     <!-- <script src="./js/module-4.js"></script> -->
     <script src="./js/module-5.js"></script>
+    <script src="./js/codewars.js"></script>
   </body>
 </html>
