--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- <script src="./js/exampl.js"></script> -->
     <!-- <script src="./js/module-4.js"></script> -->
-    <!-- <script src="./js/module-5.js"></script> -->
-    <script src="./js/codewars.js"></script>
+    <script src="./js/module-5.js"></script>
+    <!-- <script src="./js/codewars.js"></script> -->
   </body>
 </html>
