--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- <script src="./js/exampl.js"></script> -->
-    <!-- <script src="./js/module-4.js"></script> -->
-    <!-- <script src="./js/module-5.js"></script> -->
-    <script src="./js/codewars.js"></script>
+    <script src="./js/exampl.js" type="module"></script>
+    <!-- <script src="./js/module-4.js" type="module"></script> -->
+    <!-- <script src="./js/module-5.js" type="module"></script> -->
+    <!-- <script src="./js/codewars.js" type="module"></script> -->
   </body>
 </html>
