--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./js/exampl.js" type="module"></script>
+    <script src="./js/object.js" type="module"></script>
+    <!-- <script src="./js/exampl.js" type="module"></script> -->
     <!-- <script src="./js/module-4.js" type="module"></script> -->
     <!-- <script src="./js/module-5.js" type="module"></script> -->
     <!-- <script src="./js/codewars.js" type="module"></script> -->
