--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   </head>
   <body>
     <!-- <script src="./js/object.js" type="module"></script> -->
-    <script type="module" src="./js/objrisuch.js"></script>
+    <!-- <script type="module" src="./js/objrisuch.js"></script> -->
     <!-- <script src="./js/exampl.js" type="module"></script> -->
     <!-- <script src="./js/module-4.js" type="module"></script> -->
     <!-- <script src="./js/module-5.js" type="module"></script> -->
     <!-- <script src="./js/codewars.js" type="module"></script> -->
+    <script type="module" src="./js/module-3.js"></script>
   </body>
 </html>
