--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!-- <script src="./js/module-4.js" type="module"></script> -->
     <!-- <script src="./js/module-5.js" type="module"></script> -->
     <!-- <script src="./js/codewars.js" type="module"></script> -->
-    <!-- <script src="./js/callback.js" type="module"></script> -->
+    <script src="./js/callback.js" type="module"></script>
     <!-- <script type="module" src="./js/module-3.js"></script> -->
-    <script type="module" src="./js/metod_massive.js"></script>
+    <!-- <script type="module" src="./js/metod_massive.js"></script> -->
   </body>
 </html>
