--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- <script src="./js/callback.js" type="module"></script> -->
     <!-- <script type="module" src="./js/module-3.js"></script> -->
     <!-- <script type="module" src="./js/metod_massive.js"></script> -->
-    <script type="module" src="./js/module-4_tasks.js"></script>
+    <!-- <script type="module" src="./js/module-4_tasks.js"></script> -->
+    <script type="module" src="./js/this.js"></script>
   </body>
 </html>
