--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <!-- <script type="module" src="./js/metod_massive.js"></script> -->
     <!-- <script type="module" src="./js/module-4_tasks.js"></script> -->
     <script type="module" src="./js/this.js"></script>
+    <!-- <script type="module" src="./js/module-5_tasks.js"></script> -->
   </body>
 </html>
